Refcycle changelog
==================

Changes since version 0.0.1
---------------------------

- Add annotations for basic types (strings, numbers).

- Rename original 'export_json' (converting to a string) to 'to_json';
  'export_json' now exports to a file.

- Added ObjectGraph.export_image function; uses the GraphViz 'dot' command
  (if available) to write an image file.

- Ensure that export_json and to_dot always return Unicode.

- Fix quoting of labels with double quotes in in to_dot.

- Documentation and docstrings improved.

- IDirectedGraph now inherits directly from appropriate abstract base classes
  (Container, Iterable, Sized).


Release 0.0.1
-------------

Bugfix release: fix setup.py download URL.


Release 0.0.0
-------------

First complete release.